[gd_scene load_steps=4 format=3 uid="uid://b7vy2x3qnxqkd"]

[ext_resource type="Script" path="res://scripts/tv/tv_controller.gd" id="1_tv_controller"]
[ext_resource type="Script" path="res://scripts/tv/websocket_server.gd" id="2_ws_server"]
[ext_resource type="Script" path="res://scripts/tv/scene_manager.gd" id="3_scene_manager"]

[node name="TVMain" type="Node"]
script = ExtResource("1_tv_controller")

[node name="WebSocketServer" type="Node" parent="."]
script = ExtResource("2_ws_server")

[node name="SceneManager" type="Node" parent="."]
script = ExtResource("3_scene_manager")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.101961, 0.101961, 0.180392, 1)

[node name="SceneContainer" type="Node2D" parent="."]

[node name="TransitionOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ConnectionLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 60.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="DebugLabel" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
